# filewizard

./: .gitignore  CMakeLists.txt  README.md
application/console/: CMakeLists.txt  filewizard.cpp
cmake/: CompilerOptions.cmake
include/: gd_utf.hpp  gd_utf8.hpp  gd_utf8_string.h  gd_utf8_string.hpp
source/: app_file.cpp  app_file.h  app_file.hpp  application.cpp  application.hpp  application_file.cpp  application_file.hpp  gd_arguments.cpp  gd_arguments.h  gd_arguments_print.cpp  gd_calculate_constant.h  gd_calculate_parse.cpp  gd_calculate_parse.h  gd_database_record.cpp  gd_database_record.h  gd_database_sqlite.cpp  gd_database_sqlite.h  gd_database_types.h  gd_database_value.h  gd_file.cpp  gd_file.h  gd_file_rotate.cpp  gd_file_rotate.h  gd_log_logger.cpp  gd_log_logger.h  gd_log_logger_define.h  gd_log_logger_printer.cpp  gd_log_logger_printer.h  gd_sql_query.cpp  gd_sql_query.h  gd_sql_value.cpp  gd_sql_value.h  gd_sql_values.h  gd_types.h  gd_utf.cpp  gd_utf8.cpp  gd_utf8.hpp  gd_utf8_2.cpp  gd_utf8_2.h  gd_utf8_string.cpp  (+6 more)
tests/: CMakeLists.txt  catch.h  catch_application.cpp  catch_file.cpp  catch_lua.cpp  catch_text.cpp  fw_test.cpp  fw_test.h
